--- a/public/css/sample.css
+++ b/public/css/sample.css
@@ -168,11 +168,39 @@ select[name=max-length] {
 }
 
 
+/*
+completed page
 
+*/
 
+.conplete_wrapper {
+  padding: 1em;
+}
 
+#completed p, #completed .back {
+  text-align: center;
+  margin-bottom: 2em;
+}
 
+#completed .message {
+  font-size: 1.2em;
+  font-weight: bold;
+}
 
+#completed .back a {
+  width: 100%;
+  display: block;
+  -webkit-appearance: none;
+  padding: .5em;
+  text-align: center;
+  background-color: transparent;
+  font-size: 100%;
+  border: 1px solid #fff;
+  color: #fff;
+  border-radius: 3px;
+  text-decoration: none;
+  font-weight: bold;
+}
 
 
 
